<resources>
    <string name="app_name">App Calculadora</string>
    <string name="buttonDigCero_Text">0</string>
    <string name="buttonDigUno_Text">1</string>
    <string name="buttonDigDos_Text">2</string>
    <string name="buttonDigTres_Text">3</string>
    <string name="buttonDigCuatro_Text">4</string>
    <string name="buttonDigCinco_Text">5</string>
    <string name="buttonDigSeis_Text">6</string>
    <string name="buttonDigSiete_Text">7</string>
    <string name="buttonDigOcho_Text">8</string>
    <string name="buttonDigNueve_Text">9</string>
    <string name="buttonDigPunto_Text">.</string>

    <string name="buttonOpIgual_Text">=</string>
    <string name="buttonOpPor_Text">*</string>
    <string name="buttonOpDiv_Text">/</string>
    <string name="buttonOpMenos_Text">-</string>
    <string name="buttonOpMas_Text">+</string>
    <string name="buttonOpSigno_Text">+/-</string>
    <string name="buttonOpPorciento_Text">%</string>
    <string name="buttonOpBorrar_Text">C</string>

    <string name="buttonOpPot_Text">POW</string>
    <string name="buttonOpRaiz_Text">SQRT</string>
    <string name="buttonOpSen_Text">SEN</string>
    <string name="buttonOpCos_Text">COS</string>
    <string name="buttonOpTan_Text">TAN</string>
    <string name="buttonOpCTan_Text">CTAN</string>
    <string name="buttonOpSec_Text">SEC</string>
    <string name="buttonOpCsec_Text">CSEC</string>
    <string name="buttonOpParIzq_Text">(</string>
    <string name="buttonOpParDer_Text">)</string>
</resources>
